--- a/zainteresowania.html
+++ b/zainteresowania.html
@@ -12,3 +12,6 @@
 <main> 
 <a href="index.html"> Strona główna </a>
 <p> Interesuję się technologią, piłką nożną i komputerami. </p>
+</main>
+</body>
+</html>
