--- a/zainteresowania.html
+++ b/zainteresowania.html
@@ -11,7 +11,7 @@
 </header>
 <main> 
 <a href="index.html"> Strona główna </a>
-<p> Interesuję się technologią, piłką nożną i komputerami. </p>
+<p> Interesuję się technologią, piłką nożną, komputerami i gotowaniem.  </p>
 </main>
 </body>
 </html>
