--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
 
 <a href="https://www.instagram.com/bartusioook/?hl=pl" target="_blank">Instagram</a> 
 
+<p> <b> E-mail: </b> 19d.bartosz.blaszczyk@ezse.pl </p>
 
+
+  <div id="watermark"> 2020 Bartosz Błaszczyk </div>
 
 
 </footer>
